...
                                onTipoClick = onTipoSelected,
                                modifier = Modifier.weight(1f)
                            )
                            
                            if (canAdd) {
                                TactileButton(
                                    text = "Adicionar Produto",
                                    onClick = onAddProdutoClick,
                                    modifier = Modifier
                                        .fillMaxWidth()
                                        .padding(20.dp)
                                )
                            }
...
